wip: add hover state and fix alignment on hero content

--- a/assets/_sass/components/blog/home-page/_home-page.scss
+++ b/assets/_sass/components/blog/home-page/_home-page.scss
@@ -27,11 +27,16 @@
 
   .article-card {
     background-color: $primary-fill-color;
-    padding:16px;
+		transition: all 125ms ease-out;
+		padding: 16px;
     margin: 8px;
     border-radius: 8px;
   }
-
+	/* Hover state */
+	.article-card:hover {
+		background-color: $secondary-fill-color;
+	}
+  
 }
 
 .hero {
@@ -169,6 +174,9 @@ article {
 }
 
 .hero-content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
   > p:first-of-type {
     color: black;
   }
