--- a/assets/_sass/defaults/_default-variables.scss
+++ b/assets/_sass/defaults/_default-variables.scss
@@ -6,6 +6,7 @@ $navbar-default-link-hover-color: $brand-info;
 $navbar-default-link-hover-bg: white;
 $link-color: #e49134;
 $primary-fill-color:    #F6F5F4;
+$secondary-fill-color: #ECEBE9;
 
 // Custom colors
 $color-grey: #333;
